tests/paczka1/fuzzy1/40175446.err
Error in line 3: lKXRnc4t S714 59,8
Error in line 6: 7yIkSBFEBlo S957 2,6
Error in line 23: lKXRnc4t A518 25,0
